# librehealth-radiology-agents

./: .dockerignore  .gitignore  .gitlab-ci.yml  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  README.md  docker-compose.seed.yml  docker-compose.tls.yml  docker-compose.yml  pyproject.toml
.gitlab/issue_templates/: Bug.md  Feature.md
.gitlab/merge_request_templates/: Default.md
agents/communications/: CLAUDE.md  Dockerfile  classifier.py  composer.py  handler.py  routing.py  server.py  specialty-routing.yaml  tools.py
agents/communications/tests/: fakes.py  test_classifier.py  test_composer.py  test_handler.py  test_roundtrip.py  test_routing.py
agents/ehr-assistant/: CLAUDE.md  Dockerfile  handler.py  server.py
agents/ehr-assistant/tests/: test_handler.py
agents/impression-generation/: CLAUDE.md  Dockerfile  handler.py  llm_draft.py  server.py
agents/impression-generation/tests/: test_handler.py  test_llm_draft.py
agents/interpretation-assistant/: CLAUDE.md  Dockerfile  conftest.py  cxr_model.py  handler.py  registry.py  server.py
agents/interpretation-assistant/tests/: conftest.py  test_cxr_model.py  test_cxr_screen.py  test_evidence_capture_wiring.py  test_handler.py  test_pneumothorax_detect.py
agents/report-verification/: CLAUDE.md  Dockerfile  conftest.py  handler.py  server.py
agents/report-verification/rules/: critical-comm-required.yaml  engine.py  laterality-consistency.yaml  mammo-birads-code-valid.yaml  report_body.py
agents/report-verification/tests/: test_engine.py  test_handler.py  test_report_body.py
agents/worklist-triage/: CLAUDE.md  Dockerfile  handler.py  server.py
agents/worklist-triage/tests/: test_handler.py
contracts/: escalation-policy.schema.json  specialty-routing.schema.json  studycontext.schema.json
contracts/cards/: communications.json  ehr-assistant.json  impression-generation.json  interpretation-assistant.json  report-verification.json  worklist-triage.json
contracts/events/: ohif-opened.schema.json  orthanc-stable.schema.json  ris-finalized.schema.json
contracts/skills/: comms.checkAck.schema.json  comms.dispatch.schema.json  comms.escalate.schema.json  comms.schema.json  ehr.schema.json  impression.schema.json  interpretation.schema.json  report.schema.json  triage.schema.json
docker/caddy/: Caddyfile
docker/comms-ledger/: seed_oncall.py
docker/ohif/: app-config.js  default.conf
docker/openmrs/: README.md  bootstrap_presign_concept.py
docker/orthanc/: orthanc.json
docs/: cad-inference.md  dicom-evidence-writeback.md  ehr-inbox-notification.md  embed-mammography-mapping.md  hosted-tls-overlay.md  mimic-cxr-mapping.md  o3-dev-stack.md  ohif-integration-approach.md  presign-concept.md  showcase-runbook.md  signoff-link.md
integrations/ohif-extension/: Dockerfile  README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
integrations/ohif-extension/mode/: index.js
integrations/ohif-extension/src/: index.ts  types.ts
integrations/orthanc-plugin/: README.md  orthanc_stable_study.lua  orthanc_stable_study.py
integrations/worklist-api/: Dockerfile  ack.py  assignment.py  findings.py  findings_store.py  main.py  store.py
integrations/worklist-api/tests/: test_ack.py  test_api.py  test_assignment.py  test_findings.py  test_store.py
libs/radagent-common/: pyproject.toml
libs/radagent-common/radagent_common/: __init__.py  a2a.py  ack_link.py  client.py  comms_ledger.py  context.py  fhir_client.py  fhir_models.py  imaging.py  negation.py  openmrs_rest.py  orthanc_client.py  paths.py  tracing.py  validation.py  worklist_client.py
libs/radagent-common/tests/: test_ack_link.py  test_client.py  test_comms_ledger.py  test_comms_ledger_it.py  test_correlation_ids.py  test_fhir_client.py  test_fhir_client_notification.py  test_fhir_models.py  test_imaging.py  test_negation.py  test_openmrs_rest.py  test_openmrs_rest_reason.py  test_orthanc_client.py  test_orthanc_client_write.py  test_orthanc_stable_event.py  test_presign_concept_drift.py  test_push_roundtrip.py  test_tracing.py  test_worklist_client.py
mocks/: mock_agent.py  run_walking_skeleton.py
mocks/fixtures/: README.md  comms.checkAck.output.sample.json  comms.dispatch.output.sample.json  diagnosticreport.ct_aortic_dissection.final.json  fhir_bundle.sample.json  studycontext.ct_aortic_dissection.json  studycontext.cxr_pneumothorax.json  studycontext.mammo_routine.json  studycontext.mr_brain.json  studycontext.sample.json
orchestrator/: Dockerfile  __init__.py  activities.py  ingress.py  ingress_store.py  state.py  worker.py  workflow.py
orchestrator/config/: escalation-policy.yaml
orchestrator/tests/: test_ack_loop.py  test_ack_replay.py  test_dead_letters.py  test_e2e_temporal.py  test_escalation_ladder.py  test_ingress_durability.py  test_ingress_idempotent.py  test_ingress_resolution.py  test_ohif_opened_endpoint.py  test_policy_dead_letter.py  test_policy_deadletter_replay.py  test_poller_observability.py  test_presign_impression.py  test_presign_replay.py  test_publish_priority.py  test_push_callback.py  test_ris_event_nudge.py  test_ris_poller.py  test_signoff_override.py  test_signoff_override_deploy.py  test_signoff_override_http.py  test_signoff_override_replay.py  test_signoff_timeouts.py  test_worker_registration.py  test_worker_tracing.py  test_workflow_gates.py  test_write_presign_impression_activity.py
orchestrator/tests/fixtures/: ack_preloop_history.json  deadletter_pre54_history.json  pre57_workflow.py  presign_pre26_history.json  signoff_pre57_history.json
scripts/: audit_registry_selection.py  dump_openmrs_seed.sh  load_demo_cxr.py  validate_contracts.py
scripts/mimic/: README.md  bootstrap_radiology_concept.py  curate_cohort.py  dicom_fixup.py  fetch.py  link_radiology_studies.py  load_cohort.py  manifest.py  omrs_client.py  referrers.py  registry_corpus.py  report_seeder.py  requirements.txt  sample_cohort.json  share_cohort.py  showcase_metrics.py
scripts/mimic/tests/: test_curate_cohort.py  test_dicom_fixup.py  test_etl.py  test_omrs_client.py  test_referrers.py  test_report_seeder.py  (+2 more)
(+27 files in other folders)
