# Root workspace config for the LH-Radiology monorepo.
# The shared library is installed separately:  pip install -e libs/radagent-common
# Agents run as standalone roots (their own dir on sys.path); orchestrator runs as a package.

[project]
name = "lh-radiology-agents"
version = "0.2.0"
description = "Multi-agent radiology system on LibreHealth Radiology (A2A agents + Temporal orchestrator)."
requires-python = ">=3.11"
dependencies = [
  # a2a-sdk is pinned once — in radagent-common's `a2a` extra — so it can't drift across files:
  "radagent-common[a2a]",    # -> a2a-sdk[http-server]==1.0.3
  "temporalio==1.29.0",      # pinned exact (newest <2; verified requires-python ok for 3.11)
  "fastapi>=0.110",
  "uvicorn>=0.29",
  "httpx>=0.27",
  "pydantic>=2.6",
  "pyyaml>=6.0",
  "jsonschema>=4.21",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["agents", "libs", "mocks"]

[tool.uv.sources]
radagent-common = { path = "libs/radagent-common", editable = true }
