[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "radagent-common"
version = "0.1.0"
description = "Shared library for LibreHealth Radiology multi-agent system: StudyContext model, A2A factory, fhir2/Orthanc clients, validation, tracing."
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.6",
  "jsonschema>=4.21",
  "httpx>=0.27",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
# A2A server stack (radagent_common.a2a). Optional because the core lib + handler tests never
# import a2a.* (golden rule 4) — only agents that RUN a server need it. Pinned EXACTLY: a2a-sdk
# churns hard (0.3 pydantic -> 1.0 protobuf rewrite; see a2a.py). [http-server] pulls starlette.
# This is the single source of truth for the a2a-sdk pin.
a2a = ["a2a-sdk[http-server]==1.0.3"]

[tool.setuptools.packages.find]
where = ["."]
include = ["radagent_common*"]
