[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "radagent-common"
version = "0.1.0"
description = "Shared library for LibreHealth Radiology multi-agent system: StudyContext model, A2A factory, fhir2/Orthanc clients, validation, tracing."
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.6",
  "jsonschema>=4.21",
  "httpx>=0.27",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
# A2A server stack (radagent_common.a2a). Optional because the core lib + handler tests never
# import a2a.* (golden rule 4) — only agents that RUN a server need it. Pinned EXACTLY: a2a-sdk
# churns hard (0.3 pydantic -> 1.0 protobuf rewrite; see a2a.py). [http-server] pulls starlette.
# This is the single source of truth for the a2a-sdk pin.
a2a = ["a2a-sdk[http-server]==1.0.3"]
# DICOM imaging (pydicom + numpy). Optional: the read-only core lib works without any DICOM parsing.
# Two consumers pull it in -- radagent_common.orthanc_client's evidence WRITE path (#59) and
# radagent_common.imaging's pixel decode for CAD reads (#27/#71). pydicom 3.x is a real API break
# from 2.x (transfer-syntax-derived endianness, enforce_file_format renamed) so this pin floors at
# 3.0; radagent_common.imaging raises a named ImportError when the extra is missing so a
# misconfigured image fails loudly.
imaging = [
  "pydicom>=3.0",  # the test fixtures use Dataset.save_as(enforce_file_format=...), a 3.0 API
  "numpy>=1.24",
]
# OpenTelemetry tracing (#28). Optional: the core lib + handler tests never touch OTel — only the
# worker/ingress entrypoints (and the compose stack) install this. tracing.init_tracing imports it
# lazily. The Temporal TracingInterceptor lives in temporalio.contrib.opentelemetry and only needs
# opentelemetry-api (pulled here); no separate temporalio[opentelemetry] pin required.
otel = [
  "opentelemetry-api>=1.20",
  "opentelemetry-sdk>=1.20",
  "opentelemetry-exporter-otlp-proto-http>=1.20",
  # The instrumentation packages track their own 0.x line, which must match the core version:
  # core 1.N pairs with instrumentation 0.(N+21)bX. 0.41b0 is the release that pairs with the
  # 1.20 floor above, so bound it here too — otherwise pip is free to pull a 0.x too old for
  # the core it just resolved.
  "opentelemetry-instrumentation-fastapi>=0.41b0",
  "opentelemetry-instrumentation-starlette>=0.41b0",  # agent-side (a2a.py builds a raw Starlette app)
  "opentelemetry-instrumentation-httpx>=0.41b0",      # inject/extract traceparent on A2A + fhir2 calls
]

[tool.setuptools.packages.find]
where = ["."]
include = ["radagent_common*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
